# mayastor-control-plane

./: Cargo.toml  shell.nix
common/: Cargo.toml
common/src/: lib.rs
common/src/mbus_api/: mbus_nats.rs  mod.rs
composer/: Cargo.toml
composer/src/: lib.rs
control-plane/agents/: Cargo.toml
control-plane/agents/common/src/: lib.rs
control-plane/agents/common/src/v0/: msg_translation.rs
control-plane/agents/core/src/core/: grpc.rs  specs.rs  wrapper.rs
control-plane/agents/core/src/nexus/: specs.rs
control-plane/agents/core/src/node/: service.rs
control-plane/agents/core/src/pool/: specs.rs
control-plane/agents/core/src/volume/: specs.rs
control-plane/agents/jsongrpc/src/: service.rs
control-plane/grpc/src/operations/volume/: traits.rs
control-plane/rest/: Cargo.toml
control-plane/rest/tests/: v0_test.rs
deploy/: core-agents-deployment.yaml  csi-controller-deployment.yaml  csi-node-daemonset.yaml  msp-deployment.yaml  rest-deployment.yaml
deployer/: Cargo.toml
deployer/src/infra/: mayastor.rs
kubectl-plugin/src/resources/: node.rs  pool.rs  utils.rs  volume.rs
nix/: overlay.nix
