[patch.crates-io]
# Update nix/overlay.nix with the sha256:
# nix-prefetch-url https://github.com/openebs/Mayastor/tarball/$rev --print-path --unpack
paperclip = { git = "https://github.com/MayastorControlPlane/paperclip", branch = "develop" }

[profile.dev]
panic = "abort"

[workspace]
members = [
    "control-plane/agents",
    "composer",
    "control-plane/rest",
    "control-plane/macros",
    "deployer",
    "common",
# Test mayastor through the rest api
    "tests-mayastor",
]
