[package]
name = "common-lib"
version = "0.1.0"
authors = ["paul <paul.yoong@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Version is pinned due to incompatibilities with the instrument crate in the newer versions
# https://github.com/tokio-rs/tracing/issues/1219
async-trait = "=0.1.42"
dyn-clonable = "0.9.0"
etcd-client = "0.5"
log = "0.4.14"
nats = "0.9"
async-nats = "0.9"
once_cell = "1.4.1"
paperclip = { version = "0.5.0", features = ["actix3"] }
percent-encoding = "2.1.0"
# this revision prevents the upgrade to 0.4.0 tonic
rpc = { git = "https://github.com/gila/rpc", branch = "v0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smol = "1.0.0"
snafu = "0.6"
strum = "0.19"
strum_macros = "0.19"
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2"
url = "2.2.0"
uuid = { version = "0.7", features = ["v4"] }

[dev-dependencies]
composer = { path = "../composer" }
oneshot = "0.1.2"
