[package]
name = "deployer"
version = "0.1.0"
authors = ["Tiago Castro <tiago.castro@mayadata.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "deployer"
path = "bin/src/deployer.rs"

[lib]
name = "deployer_lib"
path = "src/lib.rs"

[dependencies]
composer = { path = "../composer" }
common-lib = { path = "../common" }
structopt = "0.3.15"
tokio = { version = "0.2", features = ["full"] }
async-trait = "=0.1.42"
strum = "0.19"
strum_macros = "0.19"
paste = "1.0.4"
serde_json = "1.0"
humantime = "2.0.1"
once_cell = "1.4.1"
reqwest = "0.10.0"
futures = "0.3.8"
